--- a/package.json
+++ b/package.json
@@ -3,23 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^6.1.1",
-    "@heroicons/react": "^1.0.1",
-    "@tailwindcss/postcss7-compat": "^2.1.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "autoprefixer": "^9",
+    "@craco/craco": "^6.4.0",
+    "@heroicons/react": "^1.0.5",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "axios": "^0.21.1",
-    "path-to-regexp": "^6.2.0",
-    "postcss": "^7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-paginate": "^7.1.2",
-    "react-router-dom": "^5.2.0",
+    "react-paginate": "^7.1.5",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "craco start",
@@ -44,5 +39,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^9",
+    "postcss": "^7",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
 }
