--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.21.1",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.6",
+    "@types/react": "^17.0.33",
+    "@types/react-dom": "^17.0.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-paginate": "^7.1.5",
+    "react-query": "^3.31.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "typescript": "^4.4.4",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -41,6 +46,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-paginate": "^7.1.1",
+    "@types/react-router-dom": "^5.3.2",
     "autoprefixer": "^9",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
