--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-query": "^3.31.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "swiper": "^7.2.0",
     "typescript": "^4.4.4",
     "web-vitals": "^2.1.2"
   },
