--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "color-thief-react": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet-async": "^1.1.2",
     "react-query": "^3.31.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
